# kaggl.air

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci_action.yml
kaggl_air/: Kaggle_air.py  __init__.py
kaggl_air.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/kaggl_air/: __init__.py  kaggle_air.py
tests/: test_mymodule.py
