[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "kaggl_air"
version = "0.1.0"
authors = [
    { name="Edgar Abasov", email="edgarabasov1@gmail.com" },
]
description = "easy downloader of datasets from kaggle.com"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]